force-app/main/default/objects/OrderItem/fields/L_nea_de_PO__c.field-meta.xml
<CustomField>
    <fullName>L_nea_de_PO__c</fullName>
    <label>Línea de PO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>