force-app/main/default/objects/OrderItem/fields/Recurso__c.field-meta.xml
<CustomField>
    <fullName>Recurso__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurso</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>