force-app/main/default/objects/OrderItem/fields/Taller__c.field-meta.xml
<CustomField>
    <fullName>Taller__c</fullName>
    <label>Taller</label>
    <length>250</length>
    <type>Text</type>
</CustomField>