force-app/main/default/objects/OrderItem/fields/Tallernew__c.field-meta.xml
<CustomField>
    <fullName>Tallernew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taller</label>
    <referenceTo>Taller__c</referenceTo>
    <relationshipLabel>Order Products</relationshipLabel>
    <relationshipName>Order_Products</relationshipName>
    <type>Lookup</type>
</CustomField>